adding a AUTH_GATEWAY_CLIENT_SECRET

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       KC_BOOTSTRAP_ADMIN_PASSWORD: admin
       KC_HEALTH_ENABLED: true
       KC_METRICS_ENABLED: true
+      AUTH_GATEWAY_CLIENT_SECRET: local-development-secret
     ports:
       - "127.0.0.1:8090:8080"
     command: ["start-dev", "--import-realm"]
