--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for keycloak-service-np on 2025-08-21T17:50:30-04:00
+# fly.toml app configuration file generated for keycloak-service-np on 2025-08-21T20:53:54-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -7,20 +7,33 @@ app = 'keycloak-service-np'
 primary_region = 'atl'
 
 [build]
+  dockerfile = 'Dockerfile'
 
 [env]
-  KC_HOSTNAME = "https://keycloak-service-np.fly.dev"
-  KC_HOSTNAME_ADMIN = "https://keycloak-service-np.fly.dev"
+  KC_HTTP_ENABLED = 'true'
+  KC_HTTP_PORT = '8080'
+  KC_PROXY_HEADERS = 'xforwarded'
+  KC_HOSTNAME = 'keycloak-service-np.fly.dev'
 
-[http_service]
+[[services]]
+  protocol = 'tcp'
   internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
   processes = ['app']
 
+  [[services.ports]]
+    port = 80
+    handlers = ['http']
+
+  [[services.ports]]
+    port = 443
+    handlers = ['tls', 'http']
+
+  [services.concurrency]
+    type = 'connections'
+    hard_limit = 200
+    soft_limit = 100
+
 [[vm]]
-  memory = '2gb'
+  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
