some broken wip

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: Terraform Infra
+name: Terraform
 
 on:
   push:
@@ -24,6 +24,9 @@ jobs:
     env:
       RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
       RENDER_OWNER_ID: ${{ secrets.RENDER_OWNER_ID }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: us-east-1
 
     defaults:
       run:
@@ -51,4 +54,5 @@ jobs:
         run: terraform plan
 
       - name: Terraform Apply
+        if: github.event_name == 'push' || github.event.inputs.environment != ''
         run: terraform apply -auto-approve
